manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cakephp
spec:
  selector:
    app: cakephp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
