manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cakephp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - cakephp.clubplanner.fundaments.support
      secretName: cakephp-tls
  rules:
    - host: cakephp.clubplanner.fundaments.support
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cakephp
                port:
                  number: 80
